--- a/Project/ctf.html
+++ b/Project/ctf.html
@@ -56,7 +56,7 @@
          </div>
          <div class="row">
          <div class="col-12 p-4">
-            <p>The 3108 CTF is a yearly event that incorporates a sense of nationalism to commemorate our independence on August 31st, 1957. In order to maintain a national perspective that was present in previous years, we strived to embody the theme and foster robust partnerships with Bahtera Siber, with whom we collaborated closely. It was important for us to establish a solid bond in order to ensure the success of the event each year.</p>
+            <p>The 3108 CTF is a yearly event that BahteraSiber organized to incorporate a sense of nationalism to commemorate our independence on August 31st, 1957. In order to maintain a national perspective that was present in previous years, we strived to embody the theme and foster robust partnerships with Bahtera Siber, with whom we collaborated closely. It was important for us to establish a solid bond in order to ensure the success of the event each year.</p>
          </div>
       </section>
       <!-- End Section Intro -->
